// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given asset 1`] = `
Object {
  "data": Array [
    8,
    8,
    16,
    1,
    24,
    128,
    173,
    226,
    4,
    34,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    42,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransaction should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "data": Array [
      8,
      128,
      250,
      191,
      166,
      178,
      182,
      143,
      7,
      18,
      20,
      58,
      151,
      31,
      208,
      43,
      74,
      7,
      252,
      32,
      170,
      209,
      147,
      109,
      60,
      177,
      210,
      99,
      185,
      110,
      15,
      26,
      0,
    ],
    "type": "Buffer",
  },
  "fee": 10000000n,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        49,
        2,
        198,
        160,
        20,
        107,
        43,
        196,
        197,
        138,
        129,
        205,
        242,
        167,
        115,
        248,
        92,
        142,
        170,
        135,
        75,
        184,
        38,
        246,
        191,
        187,
        131,
        148,
        120,
        254,
        127,
        103,
        54,
        156,
        85,
        202,
        214,
        64,
        237,
        151,
        34,
        184,
        191,
        103,
        197,
        229,
        48,
        188,
        226,
        197,
        97,
        243,
        168,
        61,
        18,
        65,
        8,
        159,
        191,
        247,
        199,
        114,
        113,
        8,
      ],
      "type": "Buffer",
    },
  ],
  "type": 8,
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `[Function]`;
